assets/styles.css
/* --color-primary: #19bdff;
    --color-primary-light: #C5EEFF;
    --color-primary-dark: #0C5E7F;
    --color-secondary: #E64200;
    --color-secondary-light: #F8CFBF;
    --color-secondary-dark: #732100;*/

* {
    --color-primary: #2642B5;
    --color-primary-light: #C8CFEC;
    --color-primary-dark: #13215A;
    --color-secondary: #00DB00;
    --color-secondary-light: #D1F8D1;
    --color-secondary-dark: #006E00;
    --color-dark: #333;
    --color-light: #999;
    --color-background: #eee;
}

body {
    font-family: "Roboto", sans-serif;
    margin: 0;
    color: var(--color-dark);
    background-color: var(--color-background);
}

h1,
h2,
h3,
h4 {
    font-weight: 500;
}

h1 {
    color: var(--color-primary);
    font-size: 2rem;
}

.report {
    padding: 0 1em;
}

.details {
    padding: .5em 1em;
    background-color: var(--color-primary-light);
}

.aside-seq {
    word-break: break-all;
    font-family: Roboto Mono, monospace;
}

.aside-seq .highlight {
    color: var(--color-secondary-dark);
    font-weight: 500;
}

.seq {
    word-break: break-all;
    font-family: Roboto Mono, monospace;
}

.prefix,
.suffix {
    color: grey;
}

.overview-link {
    background: var(--color-primary);
    color: var(--color-primary-light);
    text-decoration: none;
    display: inline-block;
    margin-top: 1em;
    padding: .25em;
    margin-right: 1em;
}

img {
    max-width: 100%;
}

.template-graphs {
    display: flex;
    flex-wrap: wrap;
}

.template-graphs>* {
    margin: 1em;
    flex-grow: 1;
    flex-basis: 30%;
}


/* Table*/

table {
    border-collapse: collapse;
    max-width: 100%;
    table-layout: fixed;
}

.widetable {
    width: 100%;
}

.smallcell {
    min-width: 4rem;
    width: 15%;
}

@media (min-width: 800px) {
    .smallcell {
        width: 10%;
    }
}

td,
th {
    border: 1px solid var(--color-primary-light);
    padding: .1rem;
}

th:first-child {
    border-left-width: 1px;
}

td.center {
    text-align: center;
}

th {
    color: var(--color-primary);
    background: var(--color-background);
    border: 2px solid var(--color-primary);
    white-space: normal;
    overflow: hidden;
    text-overflow: ellipsis;
    user-select: none;
}

th::after {
    margin-left: .25em;
    color: var(--color-primary-light);
    display: inline-block;
}

th[onclick]::after {
    content: "\21f3";
}

th[data-sortorder="asc"]::after {
    content: "\21e7";
}

th[data-sortorder="desc"]::after {
    content: "\21e9";
}

td.seq {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

tr.selected {
    background-color: var(--color-secondary-light);
}

tr:hover {
    background-color: var(--color-secondary-light);
}

.info-link {
    display: inline-block;
    color: var(--color-primary);
    text-decoration: none;
    border: 1px solid var(--color-primary);
    padding: .05em .1em;
    margin: .1em;
    border-radius: .2rem;
    font-size: .8em;
}

.info-link:hover {
    color: var(--color-secondary);
    border-color: var(--color-secondary);
}

.details th {
    background: none;
    border: none;
}


/* Collapsible regions */

.report label {
    display: block;
    font-size: 2em;
    color: var(--color-background);
    background-color: var(--color-primary);
    padding: .1em .25em;
    display: block;
    border-radius: .2rem;
    margin-top: .5em;
    cursor: pointer;
    user-select: none;
}

.report label::after {
    content: "+";
    border: 1px solid var(--color-primary-light);
    color: var(--color-primary-light);
    border-radius: 50%;
    font-size: .5em;
    padding: .1em .4em;
    float: right;
    margin: .4em 0;
    font-family: "Roboto Mono", monospace;
}

input:checked+label {
    border-radius: .2rem .2rem 0 0;
}

.report input:checked+label::after {
    content: "-";
}

.collapsable {
    display: none;
    border-left: 2px solid var(--color-primary);
}

.collapsable>pre:first-child,
.collapsable>h3:first-child {
    margin: 0;
    padding: 1em;
}

input[type="checkbox"] {
    display: none;
}

input:checked+label+.collapsable {
    display: block;
}


/* Meta data */

.meta-collapsable {
    padding-left: .25em;
}

.meta-collapsable h3:first-child {
    margin-top: 0;
    padding-top: .15em;
}


/* Runtime */

.runtime {
    display: flex;
    flex-direction: row;
    padding-bottom: 1em;
}

.runtime>div {
    background-color: var(--color-primary);
    margin-left: 5px;
    min-width: 2em;
    position: relative;
}

.runtime p {
    color: var(--color-background);
    margin: .1em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.runtime>div:nth-child(odd) {
    background-color: var(--color-primary-light);
}

.runtime>div:first-child {
    margin-left: 0;
}

.runtime-hover {
    display: none;
    position: absolute;
    width: 150px;
    border: 1px solid var(--color-primary);
    padding: .2em;
    background-color: var(--color-background);
    transform: translate(10px, -10px);
    z-index: 100;
}

.runtime-hover span {
    display: block;
}

.runtime-title {
    font-weight: 500;
}

.runtime-time {
    color: var(--color-light);
}

.runtime-desc {
    margin-top: .5em;
    font-size: .75em;
    font-style: italic;
}

.runtime>div:hover .runtime-hover {
    display: block;
}


/* reads alignment */

.reads-alignment {
    display: flex;
    flex-wrap: wrap;
}

.align-block {
    display: flex;
    flex-direction: column;
    height: auto;
}

.align-block.last:not(:last-child):not(:nth-last-child(2)) {
    padding-right: 2px;
    border-right: 5px solid var(--color-primary);
}

.reads-alignment p {
    font-family: "Roboto Mono", monospace;
    order: 2;
    margin-top: 5px;
}

.reads-alignment .seq {
    color: var(--color-primary);
    font-weight: 500;
}

.reads-alignment .number {
    color: var(--color-secondary);
}

.align-link {
    color: var(--color-primary-dark);
    text-decoration: none;
}

.align-link.unique {
    font-weight: 500;
}
/* ... */

